Fixed whitespace in footer

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -153,7 +153,7 @@ footer {
     right: 0;
     bottom: 0;
     left: 0;
-    max-height: 60px;
+    max-height: 65px;
     padding: 1em;
     background-color: #f8f8f8;
     text-align: center;
